# r8eo-x-unity

./: .claudeignore  .coverage-baseline.json  .editorconfig  .gitattributes  .gitignore  .line-limit-exceptions.json  .mcp.json  AGENTS.md  CHANGELOG.md  CI_LEARNINGS.md  CLAUDE.md  CLAUDE_SKILLS.md  CONTRIBUTING.md  ENGINE-SETUP.md  GDD.md  LICENSE  README.md  SETUP.md  VERSIONING.md  claude-git-lint.md  claude-testing-architecture.md  cliff.toml  gdd-physics-camera-input.md  gdd-technical-architecture.md  justfile  justfile.engine  patch_prefab.py  pyproject.toml
.agents/skills/: CLAUDE.md
.ai/: CLAUDE.md
.claude/: CLAUDE.md  guard-main-edit.sh  guard-master-commit.sh  settings.json  statusline.sh
.claude/agents/: throughput-builder.md  throughput-planner.md  throughput-researcher.md  (+1 more)
.githooks/: commit-msg  post-commit  pre-commit  pre-commit-engine.sh  pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  template-config.json
Assets/: CLAUDE.md  InputDiagnostics.cs  R8EOX.ruleset
Logs/: lint_baseline.md
ProjectSettings/: DynamicsManager.asset  InputManager.asset  ProjectSettings.asset  TagManager.asset  TimeManager.asset
claude-md-templates/: CLAUDE.md  autoloads-CLAUDE.md  core-CLAUDE.md  effects-CLAUDE.md  resources-CLAUDE.md  scripts-tools-CLAUDE.md  tests-CLAUDE.md  ui-CLAUDE.md
scripts/: CLAUDE.md  cleanup-batch.sh  cleanup-worktree.sh  create-integration-branch.sh  finalize-batch.sh  setup-worktree-sync.sh  wait-for-merge.sh
tests/: CLAUDE.md
tools/: CLAUDE.md  audit-skill-usage.sh  setup-engine.sh  sync-template.sh
(+761 files in other folders)
